syntax="proto3";

package user;

service UserService {
}