syntax="proto3";

package chat;

service ChatService {
    rpc CreateChat (CreateChatRequest) returns (ChatResponse);
}

message CreateChatRequest {
    repeated string member_ids = 1; 
}

message ChatResponse {
  string id = 1;
  bool blocked = 2;
  optional string blockedById = 3;
  string createdAt = 4;
  string updatedAt = 5;
}